@@ -1,5 +1,8 @@
 DFHack future
 
+  Internals:
+    - support for calling a lua function via a protobuf request (demonstrated by dfhack-run --lua).
+
   New commands:
     - move the 'grow', 'extirpate' and 'immolate' commands as 'plant' subcommands
     - 'plant create' - spawn a new shrub under the cursor
